# gogo-minigame

./: .dev.env  .gitignore  Dockerfile  authortiy.py  config.py  db.py  docker-compose.yml  eureka.py  loki.py  middleware.py  producer.py  pyproject.toml  pytest.ini  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  prod-cd.yml  stage-cd-on-premise.yml  stage-cd.yml
cointoss/: __init__.py  cointoss.py
domain/: __init__.py  minigame_repo.py  play.py
domain/model/: coin_toss.py  coin_toss_result.py  cointoss.py  plinko_result.py  ticket.py  yavarwee_result.py
domain/repository/: coin_toss.py  minigame.py  play.py  plinko.py  ticket.py  yavarwee.py
event/: consumer.py  controller.py  producer.py  publisher.py  topic.py
event/schema/: fast.py  official.py  stage.py  ticket.py
model/: bet.py  minigame.py  play.py  result.py
presentation/: coin_toss.py  cointoss.py  minigame.py  plinko.py  ticket.py  yavarwee.py
presentation/schema/: minigame.py  plinko.py
service/: cointoss.py  minigame.py  plinko.py  ticket.py  yavarwee.py
src/cointoss/domain/model/: coin_toss_result.py
src/cointoss/service/: cointoss.py
src/core/: exceptions.py  middlewares.py  urls.py
src/core/infra/: middlewares.py
src/core/infra/settings/: base.py
src/core/presentation/: api.py
src/core/settings/: base.py  local.py
src/minigame/: factory.py
src/minigame/service/: bet.py  minigame.py  validation.py
src/plinko/service/: plinko.py
src/ticket/service/: ticket.py
src/yavarwee/service/: yavarwee.py
test/: test_health.py
tests/health/: test_health.py
(+24 files in other folders)
