[tool.poetry]
name = "gogo-minigame"
version = "0.1.0"
description = ""
authors = ["Jueuunn7 <wndmsrla1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
