[tool.poetry]
name = "gogo-minigame"
version = "0.1.0"
description = ""
authors = ["Jueuunn7 <wndmsrla1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlmodel = "^0.0.22"
python-dotenv = "^1.0.1"
websockets = "^14.2"
py-eureka-client = "^0.11.13"
greenlet = "^3.1.1"
aiokafka = "^0.12.0"
kafka-python-ng = "^2.2.3"
pytest = "^8.3.5"
aiomysql = "^0.2.0"
cryptography = "^44.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
